# rompom

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rompom.yml
assets/templates/launcher/: openbor.jinja
assets/templates/pkgbuild/: default-package.jinja  multidisc-build.jinja  multidisc-package.jinja  pkgbuild.jinja  ps2-build.jinja  psx-package.jinja  segacd-build.jinja  segacd-package.jinja
checks/alejandra/: default.nix
checks/deadnix/: default.nix
checks/rustfmt/: default.nix
checks/statix/: default.nix
modules/home-manager/rompom/: default.nix
shells/default/: default.nix
src/: conf.rs  emulationstation.rs  jeuinfos.rs  main.rs  package.rs  pkgbuild.rs  queue.rs  rom.rs  screenscraper.rs  state.rs  summary.rs  ui.rs  worker.rs
src/conf/: mod.rs  update.rs
src/rom/: mod.rs  source.rs  step.rs
src/ui/: mod.rs  modal.rs  render.rs
src/worker/: helpers.rs  mod.rs  run_state.rs
src/worker/handlers/: discovery.rs  downloads.rs  mod.rs  packaging.rs  save_state.rs
