[package]
#edition = "2023"
authors = ["Guillaume Friloux <guillaume@friloux.me>"]
name = "rompom"
version = "0.5.0"

[dependencies]
screenscraper = "0.2.2"
internet_archive = "0.1.2"
checksums = "*"
chrono = "*"
dirs = "*"
getopts = "*"
indicatif = "*"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
snafu = "*"
reqwest = { version = "*", features = ["blocking"] }
openssl = { version = '*', features = ["vendored"] }
glob = "0.3.1"


[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]
