[package]
edition = "2021"
authors = ["Guillaume Friloux <guillaume@friloux.me>"]
name = "rompom"
version = "0.14.0"

[dependencies]
screenscraper = { git = "https://github.com/gfriloux/screenscraper", tag = "v0.6.0" }
#screenscraper = { path = "../screenscraper" }
internet_archive = { git = "https://github.com/gfriloux/internetarchive", tag = "v0.2.0" }
checksums = "*"
chrono = "*"
dirs = "*"
getopts = "*"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "*", features = ["serialize"] }
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
snafu = "*"
reqwest = { version = "*", features = ["blocking"] }
openssl = { version = '*', features = ["vendored"] }
glob = "0.3.1"
crossbeam-channel = "0.5"
minijinja = "2"
ctrlc = "3"


[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]
